# escarp

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/escarp/: __init__.py  agent.py  cli.py  config.py  router.py  run.py
src/escarp/identity/: __init__.py  keypair.py  signing.py
src/escarp/modes/: __init__.py  autonomous.py  delegated.py  supervised.py
src/escarp/workspace/: __init__.py  base.py  chromium.py  lightpanda.py
tests/: test_isolation.py  test_router.py  test_signing.py  test_version.py  test_workspace.py
