[project]
name = "escarp"
version = "0.1.0"
description = "Identity-aware runtime that routes AI agents to the right mode of web access"
authors = [{ name = "David Gao", email = "davidgao1345@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "agents", "browser", "identity", "web-bot-auth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cryptography>=42.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.44",
]
directory = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "playwright>=1.44",
]

[project.scripts]
escarp = "escarp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/escarp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/escarp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
